Enabled reset pasword button on password reset failure

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -205,10 +205,10 @@ Polymer({
     onPasswordResetFailure: function(response) {
         if (!response || !response.message) {
             console.error('response can not be null');
-            this._enableButton(this.$.btnResetPassword);
             return;
-        } else
-            this._showNotification(response);
+        }
+        this._enableButton(this.$.btnResetPassword);
+        this._showNotification(response);
     },
 
     /* *
@@ -233,11 +233,11 @@ Polymer({
         this._clickedOnMailResetPassword = false;
         if (!response || !response.message) {
             console.error('response can not be null');
-            this._enableButton(this.$.btnSecurityAnswer);
-            this._enableButton(this.$.btnGetUser);
             return;
-        } else
-            this._showNotification(response);
+        }
+        this._enableButton(this.$.btnSecurityAnswer);
+        this._enableButton(this.$.btnGetUser);
+        this._showNotification(response);
     },
 
     /**
@@ -246,11 +246,11 @@ Polymer({
      */
     resetPasswordFlow: function() {
         var allInput = this.querySelectorAll('t-input');
-        Array.prototype.slice.call(allInput).forEach(function(element,index,array){
+        Array.prototype.slice.call(allInput).forEach(function(element, index, array) {
             element.value = null;
         });
         var allButton = this.querySelectorAll('t-button');
-        Array.prototype.slice.call(allButton).forEach(function(element,index,array){
+        Array.prototype.slice.call(allButton).forEach(function(element, index, array) {
             element.disabled = false;
         });
         this._clickedOnMailResetPassword = false;
@@ -304,8 +304,9 @@ Polymer({
         //checking if valid email for username
         if (!this.$.newPassword.validate() || this.$.btnResetPassword.disabled)
             return;
-        
+
         this._disableButton(e.currentTarget);
+        this.$.notify.active = false;
 
         this.fire('t-forgot-password-update-password', {
             newPassword: this.$.newPassword.value,
@@ -334,12 +335,12 @@ Polymer({
     },
 
     _sendPasswordResetLink: function() {
-        this.fire('t-forgot-password-send-email', {
-            email: this.$.username.value
-        }, {
-            bubbles: true
-        });
-    }
-    //------------------------private methods end------------------------
+            this.fire('t-forgot-password-send-email', {
+                email: this.$.username.value
+            }, {
+                bubbles: true
+            });
+        }
+        //------------------------private methods end------------------------
 });
 </script>
