--- a/t-reset-password-mail-api.html
+++ b/t-reset-password-mail-api.html
@@ -62,33 +62,13 @@ Polymer({
     },
 
     _successCallback: function(event) {
-        if (!event.detail.response || !event.detail.response.status || event.detail.response.status.code == 500)
-            this.fire('t-reset-password-email-api-error', {
-                message: 'Operation error occured, please try again.',
-                code: 500
-            }, {
-                bubbles: true
-            });
-        else if (!event.detail.response.status.isSuccessful) {
-            this.fire('t-reset-password-mail-api-error', event.detail.response.status, {
-                bubbles: true
-            });
-        } else {
-            //do special handling as per api status codes
-            this.fire('t-reset-password-mail-api-success', event.detail.response, {
-                bubbles: true
-            });
-        }
+        this._successHandler(event);
+        //api component specific changes go here
     },
 
     _errorCallback: function(event) {
-        this.fire('t-reset-password-mail-api-error', {
-            message: 'Connection error occured, please try again.',
-            code: (event.request && event.request.status) ? event.request.status : ''
-        }, {
-            bubbles: true
-        });
-        console.error('t-reset-password-mail-api-error', event);
+        this._errorHandler(event);
+        //api component specific changes go here
     }
 
 });
