--- a/t-get-user-api.html
+++ b/t-get-user-api.html
@@ -105,37 +105,14 @@ Polymer({
     },
 
     _successCallback: function(event) {
-        if (!event.detail.response || !event.detail.response.status || event.detail.response.status.code == 500)
-            this.fire('t-get-user-api-error', {
-                message: 'Operation error occured, please try again.',
-                code: 500
-            }, {
-                bubbles: true
-            });
-        else if (!event.detail.response.status.isSuccessful) {
-            this.fire('t-get-user-api-error', {
-                code: event.detail.response.status.code,
-                message: event.detail.response.status.message
-            }, {
-                bubbles: true
-            });
-        } else {
-            //do special handling as per api status codes
-            this.fire('t-get-user-api-success', event.detail.response, {
-                bubbles: true
-            });
-        }
+        this._successHandler(event);
+        //api component specific changes go here
     },
 
     _errorCallback: function(event) {
-        this.fire('t-get-user-api-error', {
-            message: 'Connection error occured, please try again.',
-            code: event.request.status
-        }, {
-            bubbles: true
-        });
-        console.error('t-get-user-api-error', event);
-    },
+        this._errorHandler(event);
+        //api component specific changes go here
+    }
 
 });
 </script>
