[Fix] Exposed public API properties for external integration

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -116,6 +116,27 @@ Polymer({
         passwordQuestion: {
             type: String,
             value: 'What is your nickname?'
+        },
+
+        securityAnswer: {
+            type: String,
+            notify: true
+        },
+
+        username: {
+            type: String,
+            notify: true
+        },
+
+        newPassword: {
+            type: String,
+            notify: true
+        },
+
+        //not in use now, will be used while integrating email flow
+        userToken: {
+            type: String,
+            notify: true
         }
     },
 
