--- a/t-reset-password-api.html
+++ b/t-reset-password-api.html
@@ -57,6 +57,7 @@ Polymer({
             //password handling as per mystique API request format
             this.$.ajaxCall.body = '"' + data.newPassword + '"';
             this.$.ajaxCall.url = this._getUrl();
+            this._setLoading(true);
             this.$.ajaxCall.generateRequest();
         }
     },
