--- a/t-reset-password-mail-api.html
+++ b/t-reset-password-mail-api.html
@@ -57,6 +57,7 @@ Polymer({
         if (this._validateApiMeta()) {
             this.apiRelativeUrl = "api/User/reset/password/mail/" + data.email;
             this.$.ajaxCall.url = this._getUrl();
+            this._setLoading(true);
             this.$.ajaxCall.generateRequest();
         }
     },
