--- a/t-verify-secret-key-api.html
+++ b/t-verify-secret-key-api.html
@@ -60,6 +60,7 @@ Polymer({
                 Question: data.question,
                 Answer: data.answer
             });
+            this._setLoading(true);
             this.$.ajaxCall.generateRequest();
         }
     },
