Added validation message for required field.

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -60,7 +60,7 @@ Example:
             <neon-animatable name="securityQuestion">
                 <div class="section">
                     <p class="margin-bottom font-14">Question: [[passwordQuestion]]</p>
-                    <t-input class="margin-bottom-large" id="securityAnswer" name="securityAnswer" label="Security Answer" required value="{{securityAnswer}}"></t-input>
+                    <t-input class="margin-bottom-large" id="securityAnswer" name="securityAnswer" error-message="You missed this." label="Security Answer" required value="{{securityAnswer}}"></t-input>
                     <t-button id="btnSecurityAnswer" class="primary block margin-bottom" label="Continue" on-tap="_securityAnswerSubmit"></t-button>
                     <p class="font-12 secondary-text margin-bottom-medium">
                         If you don't rememeber your security answer, please <span class="link-style" on-tap="_clickSendPasswordResetLink">click here</span> to get password reset mail in your inbox.
