[Fix] - Removed old flexlayout.

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../neon-animation/neon-animated-pages.html">
-<link rel="import" href="../iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html" />
 <link rel="import" href="../t-button/t-button.html">
 <link rel="import" href="../t-input/t-input.html">
 <link rel="import" href="../t-password-input/t-password-input.html">
@@ -37,6 +37,7 @@ Example:
         </t-forgot-password>-->
 <dom-module id="t-forgot-password">
     <template>
+        <link rel="import" type="css" href="iron-flex" />
         <style include="travel-element-styles">
         :host,
         #pages {
