[Fix] - Removed old flexlayout.

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -37,7 +37,7 @@ Example:
         </t-forgot-password>-->
 <dom-module id="t-forgot-password">
     <template>
-        <link rel="import" type="css" href="iron-flex" />
+        <style include="iron-flex"></style>
         <style include="travel-element-styles">
         :host,
         #pages {
